# circuit-breakers

./: Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: app.py
app/api/v1/: routes_actions.py  routes_admin.py  routes_currency.py  routes_entities.py  routes_market.py  routes_stream.py  routes_world.py
app/core/: auth.py  config.py  events.py  logging.py  replay.py  rng.py  schemas.py  ticks.py
app/domain/: models.py
app/domain/rules/: base_ruleset.py  registry.py  season1_dark_grid.py
app/domain/services/: action_service.py  currency_service.py  encryption_service.py  market_service.py
app/infra/: db.py  redis.py
app/infra/migrations/: env.py
app/infra/migrations/versions/: 0001_initial.py
app/mcp/: manifest.json  server.py
tests/: conftest.py  test_actions.py  test_currency.py  test_market.py  test_stream.py  test_world.py
