[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "circuit-breakers"
version = "0.1.0"
description = "Circuit Breakers Season 1: The Dark Grid headless game engine"
authors = [{name = "Circuit Breakers", email = "noreply@example.com"}]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "psycopg[binary]>=3.1",
    "alembic>=1.13",
    "pydantic>=2.6",
    "redis>=5.0",
    "python-dotenv>=1.0",
    "structlog>=24.1",
    "orjson>=3.9",
    "httpx>=0.27",
    "passlib[bcrypt]>=1.7",
    "tenacity>=8.2",
    "pydantic-settings>=2.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.3",
    "black>=24.3",
    "mypy>=1.8"
]

[tool.pytest.ini_options]
addopts = "--cov=app --cov-report=term-missing"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "B", "UP", "S", "N", "C4"]
ignore = ["S101"]

[tool.ruff.isort]
known-first-party = ["app"]

